@@ -1,6 +1,7 @@
 Version 5.90.0.11
 Added flrandom and unsafe-flrandom
 xml: added a #:insert-newlines? argument to write-xexpr
+racket/contract: added channel/c
 
 Version 5.90.0.10
 Changed serializable-struct, etc. to provide deserialized-info:...
